# src/controller/CategoryController.js
@@ -1,6 +1,6 @@
 import pool from "../bd/Pool.js"
 
-export const validateRole = async (requestingUserId, targetUserId = null) => {
+export const validateRole = async (requestingUserId) => {
   const userSql = "SELECT role FROM users WHERE user_id = ?";
 
   const [rs] = await pool.execute(userSql, [requestingUserId]);
@@ -12,19 +12,19 @@ export const validateRole = async (requestingUserId, targetUserId = null) => {
   const { role } = rs[0];
 
   
-  if (role !== "admin" && requestingUserId !== targetUserId) {
+  if (role !== "admin" ) {
     throw { message: "Usuario no autorizado", status: 401 };
   }
 };
 
 const index = async (req, res) => { 
-  // #swagger.tags = ['Users']
+  // #swagger.tags = ['Categories']
   
   try {
     
     await validateRole(req.headers.user_id)
   
-    const sql = "SELECT * FROM users"
+    const sql = "SELECT * FROM postcategories"
     const [response] = await pool.execute(sql)
     res.status(200).json(response)
 
@@ -34,13 +34,13 @@ const index = async (req, res) => {
 }
 
 const show = async (req, res) => {
-  // #swagger.tags = ['Users']
+  // #swagger.tags = ['Categories']
 
   try {
     const { params, headers } = req;
 
     await validateRole(headers.user_id, params.id)
-    const sql = "SELECT * FROM users WHERE user_id = ?"
+    const sql = "SELECT * FROM categories WHERE category_id = ?"
     const [[response]] = await pool.execute(sql, [params.id])
     
     if (!response) { 
@@ -54,47 +54,54 @@ const show = async (req, res) => {
 }
 
 const store = async (req, res) => { 
-  // #swagger.tags = ['Users']
-
-  const required = ["username", "email", "password", "role"]
+  // #swagger.tags = ['Categories']
+  
+  const required = ["name", "description"]
   
   try {
-    const { body } = req
+    const { body, headers } = req
+    await validateRole(headers.user_id)
     const validate = required.filter(field => !(field in body))
 
     if (validate.length !== 0) { 
       throw {message: `el campo ${validate.join (',')} se requiere`, status: 400}
     }
-    const sql = "INSERT INTO users (username, email, password, role) VALUES (?,?,?,?)"
+    const sql = "INSERT INTO categories (name, description) VALUES (?,?)"
 
-    await pool.execute(sql, [body.username, body.email, body.password, body.role,])
+    await pool.execute(sql, [body.name, body.description])
 
-    res.status(201).json({message: "User created successfylly"})
+    res.status(201).json({message: "Category created successfylly"})
   } catch (error) {
     res.status(error.status || 500).json({ error: error.message });
   }
 }
 
 const update = async (req, res) => { 
-  // #swagger.tags = ['Users']
+  // #swagger.tags = ['Categories']
   
   try {
     const { body, headers, params } = req
+     console.log(body)
+     console.log(headers)
+    console.log(params)
     
-      if (!headers.user_id) {
+
+     if (!headers.user_id) {
       throw { message: "user_id en los encabezados es necesario", status: 400 };
     }
 
-
-    if (!params.id || !body.role ) {
-       throw { message: "user_id y role son necesarios", status: 400 };
+    if (!params.id) {
+      throw { message: "categories_id, es necesario", status: 400 };
     }
-     await validateRole(headers.user_id, params.id)
+    
+    await validateRole( headers.user_id, params.id);
 
-    const sql = "UPDATE users SET username = ?, email = ?, password = ?, role = ? WHERE user_id = ?"
+    
 
-    await pool.execute(sql, [body.username, body.email, body.password, body.role, params.id])
-    res.status(201).json({ message: " username, email, password y/o Role updated successfully" });
+    const sql = "UPDATE categories SET name = ?, description = ? WHERE category_id = ?"
+
+    await pool.execute(sql, [body.name, body.description, params.id])
+    res.status(201).json({ message: " name  y/o  description, updated successfully" });
   } catch (error) {
     res.status(error.status || 500).json({ error: error.message });
   }
@@ -102,7 +109,7 @@ const update = async (req, res) => {
 }
 
 const destroy = async (req, res) => {
-  // #swagger.tags = ['Users']
+  // #swagger.tags = ['Categories']
  try {
     const { params, headers } = req;
 
