# src/routes/index.js
@@ -2,7 +2,7 @@ import { Router } from "express";
 
 import { userRoutes } from "./UserRoutes.js";
 import { postRoutes } from "./PostRoutes.js";
-
+import {categoryRoutes } from "./CategoryRoutes.js"
 import { docRoutes } from './DocRoutes.js'
 
 const API_router = Router();
@@ -14,7 +14,6 @@ export const router = (app) => {
   API_router.use("/api-docs", docRoutes)
   API_router.use("/user", userRoutes )
   API_router.use("/post", postRoutes )
-  // API_router.use("/", )
-  // API_router.use("/", )
-
+  API_router.use("/category", categoryRoutes )
+  
 }
